--- a/config.example.json
+++ b/config.example.json
@@ -3,7 +3,8 @@
   "port": 8080,
   "db": {
     "url": "https://geolite.maxmind.com/download/geoip/database",
-    "file": "GeoLite2-City.mmdb.gz",
-    "checksum": "GeoLite2-City.md5"
+    "file": "GeoLite2-City.mmdb",
+    "checksum": "GeoLite2-City.md5",
+    "format": ".gz"
   }
 }
