--- a/config.example.json
+++ b/config.example.json
@@ -1,7 +1,7 @@
 {
   "host": "127.0.0.1",
   "port": 8082,
-  "db": "/tmp/mmd_storage/GeoLite2-City.mmdb",
+  "db": "/tmp/GeoLite2-City.mmdb",
   "ignore_headers": [
     "X-Forwarded-For",
     "X-Forwarded-Proto",
