--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,21 +12,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v6
         with:
-          go-version: "1.25.4"
+          go-version: "1.25.5"
           check-latest: true
+
+      - name: Check Go version
+        run: go version
 
       - name: Test
         run: make gh
 
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v8
+        uses: golangci/golangci-lint-action@v9
         with:
-          version: v2.4
+          version: v2.7.1
+          args: --config=golangci.yml --issues-exit-code=0
 
       - name: Run staticcheck
         uses: dominikh/staticcheck-action@v1
